# quiz

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirement.txt
Urmart/: apps.py  decorators.py  models.py  serializers.py  task.py  urls.py  views.py
Urmart/migrations/: 0001_initial.py  0002_alter_order_shop_id.py  0002_shopsalesstats_remove_order_member_id_and_more.py  0003_member_is_vip.py  0003_rename_member_id_order_member.py  0004_alter_product_is_vip.py  0004_remove_member_is_vip.py  0005_alter_member_id_alter_order_id_alter_product_id_and_more.py  0005_shopsalesstats.py  0006_alter_order_member_alter_order_price_and_more.py  0006_order_created_at.py  0007_member_is_vip.py  0008_shop_remove_order_price_remove_order_product_and_more.py  0009_remove_shopsalesstats_date_shopsalesstats_created_at_and_more.py  0010_remove_orderitem_subtotal.py  0011_alter_order_member_alter_orderitem_order_and_more.py
core/: __init__.py  celery.py  celerybeat_schedule.py  settings.py  urls.py
data/shop_sales_2024-12-22/: shop_sales_2024-12-22.csv
data/shop_sales_2024-12-23/: shop_sales_2024-12-23.csv
data/shop_sales_2024-12-24/: shop_sales_2024-12-24.csv
data/shop_sales_2024-12-25/: shop_sales_2024-12-25.csv
data/shop_sales_2024-12-26/: shop_sales_2024-12-26.csv
data/shop_sales_2024-12-28/: shop_sales_2024-12-28.csv
data/shop_sales_2024-12-29/: shop_sales_2024-12-29.csv
data/shop_sales_2024-12-31/: shop_sales_2024-12-31.csv
data/shop_sales_2025-01-01/: shop_sales_2025-01-01.csv
shop_sales_2024-12-23/: shop_sales_2024-12-23.csv
tests/: test_sample.py
urmart/: apps.py  decorators.py  models.py  serializers.py  task.py  urls.py  views.py
(+169 files in other folders)
