[tool.poetry]
name = "quiz_12_17"
version = "0.1.0"
description = ""
authors = ["KK-Huang86 <iankk0806@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
psycopg2-binary = "^2.9.10"
django-dotenv = "^1.4.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
